Adds unit tests for guardrail